structure of main

--- a/index.html
+++ b/index.html
@@ -14,7 +14,30 @@
 
   <header></header>
 
-  <main></main>
-  
+  <main>
+
+    <div class="box red">
+      <div class="shoes-1">
+        <img src="img/01.png" alt="">
+        <h2>il nostro modello di punta</h2>
+      </div>
+    </div>
+
+    <div class="box green">
+      <div class="shoes-2">
+        <img src="img/02.png" alt="">
+        <h2>il nostro modello di punta</h2>
+      </div>
+
+    </div>
+    <div class="box yellow">
+      <div class="shoes-3">
+        <img src="img/03.png" alt="">
+        <h2>il nostro modello di punta</h2>
+      </div>
+    </div>
+
+  </main>
+
 </body>
 </html>
