--- a/index.html
+++ b/index.html
@@ -7,32 +7,41 @@
   <title>Shoes</title>
   <link rel="stylesheet" href="CSS/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
-  <header></header>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#1">1</a></li>
+        <li><a href="#2">2</a></li>
+        <li><a href="#3">3</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <main>
 
     <div class="box red">
       <div class="shoes-1">
-        <img src="img/01.png" alt="">
+        <img id="1" src="img/01.png" alt="">
         <h2>il nostro modello di punta</h2>
       </div>
     </div>
 
     <div class="box green">
       <div class="shoes-2">
-        <img src="img/02.png" alt="">
+        <img id="2" src="img/02.png" alt="">
         <h2>il nostro modello di punta</h2>
       </div>
 
     </div>
     <div class="box yellow">
       <div class="shoes-3">
-        <img src="img/03.png" alt="">
+        <img id="3" src="img/03.png" alt="">
         <h2>il nostro modello di punta</h2>
       </div>
     </div>
