--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
 
   <main>
 
-    <div class="box red">
+    <div id="1" class="box red">
       <div class="shoes-1">
-        <img id="1" src="img/01.png" alt="">
+        <img src="img/01.png" alt="">
         <h2>il nostro modello di punta</h2>
       </div>
     </div>
 
-    <div class="box green">
+    <div id="2" class="box green">
       <div class="shoes-2">
-        <img id="2" src="img/02.png" alt="">
+        <img src="img/02.png" alt="">
         <h2>il nostro modello di punta</h2>
       </div>
 
     </div>
-    <div class="box yellow">
+    <div id="3" class="box yellow">
       <div class="shoes-3">
-        <img id="3" src="img/03.png" alt="">
+        <img src="img/03.png" alt="">
         <h2>il nostro modello di punta</h2>
       </div>
     </div>
