fix after correction

--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
   <main>
 
     <div id="1" class="box red">
-      <div class="shoes-1">
+      <div class="shoes">
         <img src="img/01.png" alt="">
         <h2>il nostro modello di punta</h2>
       </div>
     </div>
 
     <div id="2" class="box green">
-      <div class="shoes-2">
+      <div class="shoes">
         <img src="img/02.png" alt="">
         <h2>il nostro modello di punta</h2>
       </div>
 
     </div>
     <div id="3" class="box yellow">
-      <div class="shoes-3">
+      <div class="shoes">
         <img src="img/03.png" alt="">
         <h2>il nostro modello di punta</h2>
       </div>
